@@ -23,6 +23,7 @@ CHANGES:
 
 INTERNAL:
 
+ * van der Waerden test is now aligned and tested against `PMCMRplus::vanWaerdenTest()` (previously `PMCMR::vanWaerden.test()`)
  * matrixTests no longer depends on `testthat` for unit tests.
  * All unit tests are rewritten.
 
